@@ -10,7 +10,7 @@
 
 <p>Thank you for your interest in <epc:phrase ref="archive_name" />.</p>
 
-<p>To activate your new password, <epc:pin name="confirmurl">click here</epc:pin>. This will expire in <epc:pin name="maxdelta" />.</p>
+<p>You now need to <epc:pin name="confirmurl">activate your password</epc:pin>. This will expire in <epc:pin name="maxdelta" />.</p>
 
 <p>Your username is: <b><epc:pin name="username"/></b>.</p>
 
